--- a/src/App.css
+++ b/src/App.css
@@ -34,12 +34,14 @@ body{
 
 /*  typography */
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700");
+
 @font-face {
   font-family: "futura-bold";
-  src: url("../fonts/Futura-Bold.woff") format("woff");
+  src: url("./fonts/Futura-Bold.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
+
 body {
   line-height: 1.2;
   font-family: "Poppins", sans-serif;
