--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,17 @@ body{
 } */
 
 
+/* app.css */
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* ✅ Prevent horizontal scroll */
+  box-sizing: border-box;
+  width: 100%;
+}
+
+
+
 
 /* -------------------------------------------------------------------------------------------------------- */
 
